--- a/app/basic.html
+++ b/app/basic.html
@@ -35,10 +35,11 @@
     <!--
     <link rel="canonical" href="http://www.example.com/">
     -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <!-- Add your site or app content here -->
-
+    <h1>huga</h1>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
