--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-cell mdl-cell--12-col mdl-card">
               <div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">About</h2>
+                  <h2 class="mdl-card__title-text">ほげほげ</h2>
               </div>
               <div class="mdl-card__media">
                   <img class="article-image" src="images/about-header.jpg" border="0" alt="">
